--- a/blog.html
+++ b/blog.html
@@ -42,13 +42,11 @@
 
     <!-- BLOG PAGE SEACH  BAR STAR -->
     <section class="seacrh-bar">
-        <form class=" .container search-container">
-         <div>
-             <!-- <i class ="fa fa-search" ></i> -->
-             <input type="search" placeholder="Search">
-             <!-- <button type=" submit"> Search</button> -->
-         </div>
-         <button class="btn" type="submit"><i class="fa fa-search"></i></button>
+        <form class="container search-container">
+            <div>
+                <input type="search" placeholder="Search">
+                <button class="btn" type="submit"><i class="fa fa-search"></i></button>
+            </div>
         </form>
     </section>
     
