--- a/about.html
+++ b/about.html
@@ -40,8 +40,50 @@
     </nav>
     <!--NAV BAR END-->
 
-    <section class="empty-page">
-        <h2>About Page</h2>
+    <section class="about-page">
+        <div class="container-about">
+            <h2>About Us</h2>
+            <div class="about-content">
+                <h3>Our Story</h3>
+                <div class="about-description">
+                    <p>Kami di sini untuk memberikan berita terkini dengan cepat dan akurat. Tim kami yang bersemangat berkomitmen untuk menyajikan informasi yang relevan dan bermanfaat kepada Anda. Kami mengutamakan kecepatan tanpa mengorbankan keakuratan dan keberagaman sudut pandang.
+                        Terima kasih telah memilih Aplikasi Berita Terkini sebagai sumber informasi Anda. Kami berharap dapat terus menjadi mitra dalam memberikan informasi yang bermanfaat untuk Anda.</p>
+                </div>
+                <h3>Our Team</h3>
+                <div class="about-team">
+                    <div class="team-member">
+                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
+                        <h1>Hana Suci Aninda Geofani</h1>
+                        <p>BackEnd</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
+                        <h1>Hana Suci Aninda Geofani</h1>
+                        <p>BackEnd</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
+                        <h1>Hana Suci Aninda Geofani</h1>
+                        <p>BackEnd</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
+                        <h1>Hana Suci Aninda Geofani</h1>
+                        <p>BackEnd</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
+                        <h1>Hana Suci Aninda Geofani</h1>
+                        <p>BackEnd</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
+                        <h1>Hana Suci Aninda Geofani</h1>
+                        <p>BackEnd</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
