add sing-up.html, sign-in.html, categories.html

--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
         <div class="container nav-container">
             <a href="./index.html" class="logo"><h3>News Portal <span>25</span></h3></a>
             <ul class="nav-link">
-                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./news.html">News</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="./Services.html">Services</a></li>
+                <li><a href="./categories.html">Categories</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./sing-up.html">Sign In</a></li>
                 <li>
@@ -41,6 +41,7 @@
     <!--NAV BAR END-->
 
     <section class="about-page">
+        <body style="background: linear-gradient(to top left, #87ceeb, #ee82ee) no-repeat center fixed; background-size: cover;">
         <div class="container-about">
             <h2>About Us</h2>
             <div class="about-content">
@@ -52,34 +53,34 @@
                 <h3>Our Team</h3>
                 <div class="about-team">
                     <div class="team-member">
-                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
+                        <img src="./assets/image/fauzy.jpg" alt="Team Member 1">
+                        <h1>Achmad Fauzy</h1>
+                        <p>Leader Team</p>
+                    </div>
+                    <div class="team-member">
+                        <img src="./assets/image/hana.jpg" alt="Team Member 1">
                         <h1>Hana Suci Aninda Geofani</h1>
                         <p>BackEnd</p>
                     </div>
                     <div class="team-member">
-                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
-                        <h1>Hana Suci Aninda Geofani</h1>
-                        <p>BackEnd</p>
+                        <img src="./assets/image/fifah.jpg" alt="Team Member 1">
+                        <h1>Khofifah Amanda</h1>
+                        <p>FrontEnd</p>
                     </div>
                     <div class="team-member">
-                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
-                        <h1>Hana Suci Aninda Geofani</h1>
-                        <p>BackEnd</p>
+                        <img src="./assets/image/Liza.jpg" alt="Team Member 1">
+                        <h1>Siti Nurhaliza Octavianti</h1>
+                        <p>FrontEnd</p>
                     </div>
                     <div class="team-member">
-                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
-                        <h1>Hana Suci Aninda Geofani</h1>
-                        <p>BackEnd</p>
+                        <img src="./assets/image/usman.jpg" alt="Team Member 1">
+                        <h1>Usman Tupen</h1>
+                        <p>Quality Assurance</p>
                     </div>
                     <div class="team-member">
-                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
-                        <h1>Hana Suci Aninda Geofani</h1>
-                        <p>BackEnd</p>
-                    </div>
-                    <div class="team-member">
-                        <img src="./assets/image/(1).jpg" alt="Team Member 1">
-                        <h1>Hana Suci Aninda Geofani</h1>
-                        <p>BackEnd</p>
+                        <img src="./assets/image/meriza.jpg" alt="Team Member 1">
+                        <h1>Meriza Armelita</h1>
+                        <p>Quality Assurance</p>
                     </div>
                 </div>
             </div>
@@ -115,22 +116,18 @@
         <article>
             <h4>Support</h4>
             <ul>
-                <li><a href="">Online Support</a></li>
                 <li><a href="">Email</a></li>
                 <li><a href="">Phone Number</a></li>
-                <li><a href="">Social Supportt</a></li>
                 <li><a href="">Location</a></li>
-
             </ul>
-        
         </article>
 
         <article>
             <h4>Permalinks</h4>
             <ul>
-                <li><a href="">Blog</a></li>
+                <li><a href="">News</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
+                <li><a href="">Categories</a></li>
                 <li><a href="">contact</a></li>
             </ul>
         </article>
