--- a/categories.html
+++ b/categories.html
@@ -17,9 +17,24 @@
         <div class="container nav-container">
             <a href="./index.html" class="logo"><h3>News Portal <span>25</span></h3></a>
             <ul class="nav-link">
-                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./news.html">News</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="./Services.html">Services</a></li>
+                <ul class="dropdown">
+                    <li>
+                        <a href="#" class="dropdown-toggle">Categories</a>
+                        <ul class="dropdown-content">
+                            <li><a href="./categories.html">Food</a></li>
+                            <li><a href="./categories.html">Sience</a></li>
+                            <li><a href="./categories.html">Photography</a></li>
+                            <li><a href="./categories.html">Music</a></li>
+                            <li><a href="./categories.html">Technology</a></li>
+                            <li><a href="./categories.html">Art</a></li>
+                            <li><a href="./categories.html">Sport</a></li>
+                            <li><a href="./categories.html">Health</a></li>
+                            <li><a href="./categories.html">Education</a></li>
+                        </ul>
+                    </li>
+                </ul>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./sing-up.html">Sign In</a></li>
                 <li>
@@ -41,7 +56,8 @@
     <!--NAV BAR END-->
 
     <section class="empty-page">
-        <h2>Services Page</h2>
+        <body style="background: linear-gradient(to top left, skyblue, violet) no-repeat center fixed; background-size: cover;">
+        <h2>Categories Page</h2>
     </section>
 
 
@@ -73,22 +89,18 @@
         <article>
             <h4>Support</h4>
             <ul>
-                <li><a href="">Online Support</a></li>
                 <li><a href="">Email</a></li>
                 <li><a href="">Phone Number</a></li>
-                <li><a href="">Social Supportt</a></li>
                 <li><a href="">Location</a></li>
-
             </ul>
-        
         </article>
 
         <article>
             <h4>Permalinks</h4>
             <ul>
-                <li><a href="">Blog</a></li>
+                <li><a href="">News</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
+                <li><a href="">Categories</a></li>
                 <li><a href="">contact</a></li>
             </ul>
         </article>
