--- a/sign-in.html
+++ b/sign-in.html
@@ -40,26 +40,24 @@
 <!--NAV BAR END-->
 
    <!--sing-up-form-->
-<section id="sign-up-form" class="form-section-signup">
+   <section class="form-section-signin">
     <body style="background: linear-gradient(to top left, skyblue, violet) no-repeat center fixed; background-size: cover;">
-        <div class="container-signup form-section-container">
-            <h2 style="text-align: center;">Create Account</h2>
-            <form action="">
-                <input type="text" placeholder="First Name">
-                <input type="text" placeholder="Last Name">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <input type="password" placeholder="Password">
-                <!-- <div class="form-control">
-                    <label for="upload-img">Upload Profile Image</label>
-                    <input type="file" id="upload-img">
-                </div> -->
-                <button type="submit" class="btn-sign-up">Sign up</button>
-                <small>Already have an account? <a href="sign-in.html">Sign in</a></small>
-            </form>
+        <div class="container-signin form-section-container">
+            <div class="flex-container">
+                <div class="form-container">
+                    <h2 style="text-align: center;">Sign In</h2>
+                    <form action="">
+                        <input type="email" placeholder="Email">
+                        <input type="password" placeholder="Password">
+                        <button type="submit" class="btn-sign-in">Sign in</button>
+                        <small>Don't have an account? <a href="sing-up.html">Sign up</a></small>
+                    </form>
+            </div>
         </div>
-    </div>
+    </body>
 </section>
+
+
 
     <!--sing-up-form-->
 
