--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
         <div class="container nav-container">
             <a href="./index.html" class="logo"><h3>News Portal <span>25</span></h3></a>
             <ul class="nav-link">
-                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="./news.html">News</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="./services.html">Services</a></li>
+                <li><a href="./categories.html">Categories</a></li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./sing-up.html">Sign In</a></li>
                 <li>
@@ -39,10 +39,21 @@
         </div>
     </nav>
     <!--NAV BAR END-->
-
-    <section class="empty-page">
-        <h2>Contact Page</h2>
-    </section>
+    <div class="container-box-contact">
+        <body style="background: linear-gradient(to top left, skyblue, violet) no-repeat center fixed; background-size: cover;">
+                <div class="container-form-contact">
+                    <h1>Contact Us</h1>
+                    <form name="contact_form">
+                        <input type="text" class="input-field" name="name" placeholder="Your name" title="Your Name" required>
+                        <input type="email" class="input-field" name="email" placeholder="Your Email Address" title="Your Email Address" required>
+                        <input type="tel" class="input-field" name="whatsapp-number" placeholder="Your WhatsApp Number" title="Your WhatsApp Number" maxlength="10" pattern="[0-9]{10}" required>
+                        <textarea name="message" class="input-field" placeholder="Your Message" title="Your Message" style="max-width: 250px; max-height: 300px; height: 100px; min-width: 250px;" required></textarea>
+                        <input type="submit" id="btn-submit" class="input-field" name="submit" value="Send Message">
+                        <input type="reset" id="btn-reset" class="input-field" name="reset" value="Clear All">
+                    </form>
+                </div>
+            </div>
+        </div>
 
 
     <!-- Start Footer-->
@@ -73,22 +84,18 @@
         <article>
             <h4>Support</h4>
             <ul>
-                <li><a href="">Online Support</a></li>
                 <li><a href="">Email</a></li>
                 <li><a href="">Phone Number</a></li>
-                <li><a href="">Social Supportt</a></li>
                 <li><a href="">Location</a></li>
-
             </ul>
-        
         </article>
 
         <article>
             <h4>Permalinks</h4>
             <ul>
-                <li><a href="">Blog</a></li>
+                <li><a href="">News</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
+                <li><a href="">Categories</a></li>
                 <li><a href="">contact</a></li>
             </ul>
         </article>
