--- a/news.html
+++ b/news.html
@@ -13,31 +13,40 @@
 <body>
     
     <!--NAV BAR START-->
-    <nav>
-        <div class="container nav-container">
-            <a href="./index.html" class="logo"><h3>News Portal <span>25</span></h3></a>
-            <ul class="nav-link">
-                <li><a href="./news.html">News</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./categories.html">Categories</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./sing-up.html">Sign In</a></li>
-                <li>
-                    <div class="nav-profile">
-                        <div class="profile-img">
-                            <img src="./assets/image/(1).jpg" alt="">
-                        </div>
-                        <ul>
-                            <li><a href="">Dashboard</a></li>
-                            <li><a href="">LogOut</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-            <button class="phone-button Open"><i class="fa fa-bars"></i></button>
-            <button class="phone-button Close"><i class="fa fa-close"></i></button>
+    <nav> 
+        <div class="menu-icon">
+           <i class="fa fa-bars"></i>
         </div>
-    </nav>
+        <div class="logo">
+           <h3>News Portal <span>25</span></h3>
+        </div>
+        <ul class="nav-items">
+           <li><a href="./news.html">News</a></li>
+           <li><a href="./about.html">About</a></li>
+           <li><a href="./categories.html">Categories</a></li>
+           <li><a href="./contact.html">Contact</a></li>
+           <li><a href="./sing-up.html">Sign In</a></li>
+           <li class="nav-profile">
+              <div class="profile-img">
+                 <img src="./assets/image/(1).jpg" alt="">
+              </div>
+              <ul class="profile-dropdown">
+                 <li><a href="#">Dashboard</a></li>
+                 <li><a href="#">LogOut</a></li>
+              </ul>
+           </li>
+        </ul>
+        <div class="search-icon">
+            <span class="fas fa-search"></span>
+         </div>
+         <form action="#">
+            <input type="search" placeholder="Search">
+         </form>
+        <div class="cancel-icon">
+           <i class="fa fa-times"></i>
+        </div>
+       
+     </nav>
     <!--NAV BAR END-->
 
     <!-- BLOG PAGE SEACH  BAR STAR -->
